      and will be removed in \R 3.0.0.
      
      \item \code{real()}, \code{as.real()} and \code{is.real()} are now
      formally deprecated and give a warning.
    }
  }

  \subsection{INSTALLATION}{
   \itemize{
      \item The \command{configure} tests for Objective C and Objective
      C++ should now work on Mac OS 10.8 with Xcode 4.5.2 (\PR{15107}).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{beta(a, b)} could overflow to infinity in its
      calculations when one of \code{a} and \code{b} was less than one.
      (\PR{15075})

      \item \code{lbeta(a, b)} no longer gives \code{NaN} if \code{a} or
      \code{b} is very small (in the denormalized range).

      \item \code{bquote()} is now able to substitute default arguments in
      single-argument functions.  (\PR{15077})

      \item \code{browseEnv(html = FALSE)} would segfault if called from
      \R (not \command{R.app}) on a CRAN-style Mac OS X build of \R.

      \item \samp{[[<-} for lists (generic vectors) needed to increment
      \code{NAMED} count when RHS is used more than once. (\PR{15098})

      \item On Windows, warnings about opening a file or pipe with a
      non-ASCII description were sometimes output in UTF-8 rather than
      in the current locale's character set.

      \item The \code{call()} function did not duplicate its arguments.
      (\PR{15115})

      \item \code{TukeyHSD()} could give \code{NA} results with some
      \samp{na.action} methods such as \code{na.exclude()}.
      (Hinted at on R-help by John Fox.)

      \item The deprecated \code{svd(X, LINPACK = TRUE)} could alter
      \code{X} in \R 2.15.[12].  (Reported by Bill Dunlap.)

      \item Under Windows, \code{file.link()} and \code{file.symlink()}
      used the link name twice, so would always fail. (Reported
      by Rui Barradas/Oliver Soong).

      \item \code{summaryRprof(memory = "both")} mixed up the units of
      Vcells and Ncells: it now works in bytes.  (\PR{15138})
